    * 3763 FIX: Fixed playing sounds in views when using current Firefox...
    * 3779 FIX: availability: added validation of availability options
    * 3767 FIX: Fixed possible UnicodeDecodeError when having users with umlauts in the user ID
    * 3850 FIX: Fixed JS error when quicksearch snapin not in sidebar
    * 3871 FIX: stale services view: excluded services in downtime per default

    WATO:
    * 3244 WATO BI Module: swap order of aggregation function and child node selection...
    * 3002 Treasure script wato_import.py: now able to set wato host tag groups
    * 3003 New treasure script: migrate_oldcmk2wato.py...
    * 3304 Bulk deleting users is now available
    * 3239 The delay and the period of notifications can be fractions of a minute now.
    * 3116 Timerange buttons for downtimes can now be configured...
    * 3469 Show type of rule match of a rule (first, per-parameter, all) in WATO...
    * 3130 periodic service discovery can now be configured to not activate specific service changes...
    * 3472 Service list of a host: Move section of vanished services to top of the page...
    * 3538 Now hiding the activate changes button as long as another activation process is running
    * 3618 Better layout for role & permission matrix, also allow sorting and searching
    * 3544 The edit host and diagnostic page are now able to handle SNMPv3 credentials...
    * 3687 Hostname translation for piggybacked host: now it's possible to enter any number of regular expressions within this ruleset...
    * 3657 Custom host attributes can now be configured...
    * 3658 LDAP: Connections can now be enabled/disabled per site...
    * 3553 SNMPv3 noAuthNoPriv: Fixed diagnostic page
    * 3154 added ability to retrieve passwords for active checks from a password store
    * 3667 Search expressions in host search can now be given as regexes...
    * 3724 Password input fields: Added note about plain text storing (if done so)