@@ -1,0 +1,10 @@
+Title: fixed graphs displaying wrong labels
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i1
+Date: 1473855295
+
+
