@@ -495,6 +495,7 @@
     * 3767 FIX: Fixed possible UnicodeDecodeError when having users with umlauts in the user ID
     * 3850 FIX: Fixed JS error when quicksearch snapin not in sidebar
     * 3871 FIX: stale services view: excluded services in downtime per default
+    * 3874 FIX: fixed graphs displaying wrong labels
 
     WATO:
     * 3244 WATO BI Module: swap order of aggregation function and child node selection...
